--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    scroll-snap-type: y proximity;
 }
 .top-container{
     padding: 0;
