--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
-*{
+* {
     color: #D3D9BF;
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
 }
-html{
+
+html {
     scroll-snap-type: y proximity;
 }
-section{
+
+section {
     height: 100vh;
     scroll-snap-align: start;
 }
 
-.top-container{
+.top-container {
     padding: 0;
     margin: 0;
     width: 100%;
@@ -22,101 +25,119 @@ section{
     background-image: url("./images/home.jpg");
     background-size: cover;
 }
-.item{
+
+.item {
     color: #D3D9BF;
     margin: 0px 10px;
 }
-.item:hover{
+
+.item:hover {
     color: #96A65B;
 }
-.logo{
-   font-family: 'DM Serif Text', serif;
-   letter-spacing: 2px;
-   font-size: 4rem;
+
+.logo {
+    font-family: 'DM Serif Text', serif;
+    letter-spacing: 2px;
+    font-size: 4rem;
 }
-.nav_bar{
+
+.nav_bar {
     background-color: #E5F2B6;
 }
-.hero-text{
+
+.hero-text {
     font-size: 3rem;
     max-width: 800px;
     height: auto;
     text-align: center;
     margin: 200px 100px;
 }
-.middle-container{
+
+.middle-container {
     background-color: black;
     padding: 40px;
     text-align: center;
 }
-.about-container{
+
+.about-container {
     display: flex;
     gap: 100px;
     justify-content: center;
     align-items: center;
     padding: 100px;
 }
-.about-text{
+
+.about-text {
     max-width: 800px;
     font-size: 1.5rem;
     color: white;
     font-weight: bold;
     letter-spacing: 1px;
 }
-.about-image{
+
+.about-image {
     border: white 1px solid;
     border-radius: 50px;
 }
-.contact-container{
+
+.contact-container {
     background-color: #413C42;
     padding-bottom: 170px;
+    height: 100vh;
 }
-.contact-title{
+
+.contact-title {
     color: white;
     font-weight: bold;
     padding: 20px 50px;
 }
-.contact-card{
+
+.contact-card {
     margin-top: 40px;
     margin-left: 50%;
-    margin-right: 200px;
-    padding-bottom: 50px;
+    margin-right: 20px;
+    padding-bottom: 170px;
     padding-top: 20px;
     border: 5px solid white;
     padding-left: 30px;
     border-radius: 30px;
 }
-footer{
+
+footer {
     text-align: center;
-background-color: black;
-padding: 10px;
+    background-color: black;
+    padding: 10px;
 }
-@media(max-width: 853px){
-    .about-container{
+
+@media(max-width: 853px) {
+    .about-container {
         flex-wrap: wrap;
     }
-    .about-text{
+
+    .about-text {
         font-size: 1rem;
         font-weight: lighter;
         letter-spacing: 0;
         width: auto;
-        }
-    .about-image{
+    }
+
+    .about-image {
         width: 250px;
         height: 200px;
     }
-    .hero-text{
+
+    .hero-text {
         font-size: 1.5rem;
     }
-    
+
 }
-@media(max-width: 1000px)
-{
-    .contact-card{
-        margin:0;
+
+@media(max-width: 1000px) {
+    .contact-card {
+        margin: 0;
         padding: 10px;
         margin-right: 100px;
         margin-left: 100px;
         font-size: 0.5rem;
-     }
+    }
 }
